--- a/flower.css
+++ b/flower.css
@@ -105,4 +105,7 @@ ul{
     .left3{
         text-align: center;margin-top: 160px;margin-left: 500px;
     }
-    }              
+    
+    .pa{
+        margin-bottom: 20px;
+    }             
