--- a/flower.css
+++ b/flower.css
@@ -109,3 +109,9 @@ ul{
     .pa{
         margin-bottom: 20px;
     }             
+    #mg{
+        margin-top: 70px;margin-left: 50px;
+    }
+    #mg1{
+        margin-top: 50px;margin-left: 50px;
+    }
