--- a/flower.css
+++ b/flower.css
@@ -76,16 +76,16 @@ ul{
         display: flex;width: 1820px;height: 500px; ; border: 0 solid;justify-content: space-between;margin-top: 100px;
     }
 .pic4{
-   width: 400px;height: 500px;
+   width: 400px;height: 500px;background: none;
 }
 .pic5{
-   width: 400px;height: 500px;
+   width: 400px;height: 500px;background: none;
 }
 .pic6{
-   width: 400px;height: 500px;
+   width: 400px;height: 500px;background: none;
 }
 .pic7{
-    width: 400px;height: 500px;
+    width: 400px;height: 500px;background: none;
 }
 .section3{
         width: 1820px;height: 450px; border:0 solid;
